Added Java 9 support